# rag-pipeline-playground

./: .env.example  .gitignore  README.md  pyproject.toml
eval/: evaluate.py
knowledge/sample/: expense-policy.md  interview-guide.md  security-policy.md  work-rules.md
src/: cli.py  config.py  embedder.py  generator.py  loader.py  pipeline.py  retriever.py  store.py
tests/: test_pipeline.py
