[project]
name = "rag-pipeline-playground"
version = "0.1.0"
description = "RAG pipeline playground with markdown knowledge base"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.12"
dependencies = [
    "anthropic",
    "chromadb",
    "langchain-text-splitters",
    "openai",
    "pydantic-settings",
    "python-dotenv",
    "ragas",
    "typer",
]

[dependency-groups]
dev = [
    "ipykernel",
    "pytest",
    "ruff",
]

[tool.ruff]
target-version = "py312"
line-length = 120
src = ["src", "tests", "eval"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
